[gd_scene load_steps=2 format=3 uid="uid://c3m26r5shq0h0"]

[ext_resource type="Script" uid="uid://d3f2y7l1q4x4m" path="res://ui/game/hud/trainer/trainer_window.gd" id="1_7ix0s"]

[node name="TrainerHUD" type="CanvasLayer"]
script = ExtResource("1_7ix0s")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Root"]
custom_minimum_size = Vector2(520, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Root/Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 220.0
offset_bottom = 32.0
text = "Тренер"

[node name="CloseButton" type="Button" parent="Root/Panel"]
layout_mode = 0
offset_left = 470.0
offset_top = 8.0
offset_right = 505.0
offset_bottom = 32.0
text = "X"

[node name="FilterRow" type="HBoxContainer" parent="Root/Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 40.0
offset_right = 420.0
offset_bottom = 68.0
theme_override_constants/separation = 8

[node name="FilterLabel" type="Label" parent="Root/Panel/FilterRow"]
layout_mode = 2
text = "Показать:"

[node name="FilterOption" type="OptionButton" parent="Root/Panel/FilterRow"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Root/Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 76.0
offset_right = 508.0
offset_bottom = 340.0
horizontal_scroll_mode = 0

[node name="Margin" type="MarginContainer" parent="Root/Panel/Scroll"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="List" type="VBoxContainer" parent="Root/Panel/Scroll/Margin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
